...
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_prev_step"
            android:layout_width="@dimen/step_recipe_nav_size"
            android:layout_height="@dimen/step_recipe_nav_size"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/dimen_8dp"
            android:src="@drawable/ic_skip_previous_black_24dp"/>
...
            android:layout_height="@dimen/step_recipe_nav_size"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="gravity"/>

        <ImageView
            android:id="@+id/img_next_step"
            android:layout_width="@dimen/step_recipe_nav_size"
            android:layout_height="@dimen/step_recipe_nav_size"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:padding="@dimen/dimen_8dp"
            android:src="@drawable/ic_skip_next_black_24dp"/>
...
